[package]
name = "abx"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

categories = [ "command-line-utilities", "multimedia", "multimedia::audio" ]
description = "Audio ABX Comparasion Utility"
documentation = "https://docs.rs/abx"
homepage = "https://github.com/lovesegfault/abx"
keywords = [ "audio", "comparasion", "abx", "ab", "test" ]
license = "BSD-3-Clause"
readme = "./README.md"
repository = "https://github.com/lovesegfault/abx"

[dependencies]
anyhow = "1.0.40"
crossterm = "0.19.0"
glib = "0.10.3"
gstreamer = "0.16.7"
gstreamer-player = "0.16.5"
structopt = "0.3.21"
url = "2.2.1"
